--- a/web/src/main/resources/templates/role.html
+++ b/web/src/main/resources/templates/role.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Hospital Management Platform - Roles</title>
 	<!-- Required meta tags -->
@@ -13,44 +14,12 @@
 </head>
 <body>
 <div align="center">
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">HMS</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+	<!-- Header -->
+	<div th:replace="~{fragments/header :: header}">Header</div>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/patient.html">Patients</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Settings
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/role.html">Roles</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Disabled</a>
-				</li>
-			</ul>
-			<form id="searchForm" class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" id="search" type="search" placeholder="Search" aria-label="Search">
-			</form>
-			<button id="search-form" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		</div>
-	</nav>
 	<h1>Hospital Management Platform - Roles</h1>
 	<div>
-		<form id="addRole">
+		<form class="px-4 py-3" id="addRole">
 			<div class="form-group row">
 				<label for="name" class="col-sm-2 col-form-label">Name</label>
 				<div class="col-sm-10">
@@ -74,6 +43,10 @@
 
 	<div id="errorMessage"/>
 </div>
+<!-- Footer -->
+<div th:replace="~{fragments/footer :: footer}">Footer</div>
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
