Update to include appointment feature

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -18,9 +18,9 @@
 	<!-- Header -->
 	<div th:replace="~{fragments/header :: header}">Header</div>
 
-	<h1>Hospital Management Platform - Welcome</h1>
+	<h1>Hospital Management Application - Welcome</h1>
 	<div>
-
+		<img src="images/hospital.avif" alt="hma" style="width:900px;height:600px;">
 	</div>
 
 </div>
