--- a/web/src/main/resources/templates/appointment.html
+++ b/web/src/main/resources/templates/appointment.html
@@ -2,7 +2,7 @@
 <html lang="en"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Hospital Management - Users</title>
+	<title>Hospital Management Platform - Appointments </title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="user.js"></script>
+	<script type="text/javascript" src="appointment.js"></script>
 <!--	<link rel="stylesheet" type="text/css" href="style.css" />-->
 </head>
 <body>
@@ -18,31 +18,36 @@
 	<!-- Header -->
 	<div th:replace="~{fragments/header :: header}">Header</div>
 
-	<h1>Hospital Management Platform - Users</h1>
+	<h1>Hospital Management Platform - Patients Appointment</h1>
 	<div style="width:50%; align-content: center">
-		<form class="px-4 py-3" id="addUser">
+		<form class="px-4 py-3" id="addAppointment">
 			<div class="form-group row">
-				<label for="username" class="col-sm-4 col-form-label">Username</label>
+				<label for="appointmentDate" class="col-sm-4 col-form-label">appointmentDate</label>
 				<div class="col-sm-8">
-					<input type="text" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
+					<input type="datetime-local" class="form-control" id="appointmentDate" aria-describedby="dateHelp" placeholder="Pick appointment Date">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="roleId" class="col-sm-4 col-form-label">Role</label>
+				<label for="patientId" class="col-sm-4 col-form-label">Patient</label>
 				<div class="col-sm-8">
 					<div class="form-group">
-						<select id="roleId" class="text-dark form-control select2">
-							<option value="">Select role</option>
+						<select id="patientId" class="text-dark form-control select2">
+							<option value="">Select patient</option>
 						</select>
 					</div>
-<!--					<input type="text" class="form-control" id="role" aria-describedby="roleHelp" placeholder="Select role">-->
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="appointmentDescription" class="col-sm-4 col-form-label">Appointment Description</label>
+				<div class="col-sm-8">
+					<textarea id="appointmentDescription" rows="4" cols="55" placeholder="Enter Appointment Description"></textarea>
 				</div>
 			</div>
 		</form>
 		<button type="submit" id="submit-form">Submit</button>
 	</div>
 
-	<table class="table table-striped" id="allUsers">
+	<table class="table table-striped" id="allAppointments">
 
 	</table>
 
