--- a/web/src/main/resources/templates/fragments/header.html
+++ b/web/src/main/resources/templates/fragments/header.html
@@ -25,14 +25,13 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Patients
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Menu
                     </a>
-
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/patients">Patients Creation</a>
+                        <a class="dropdown-item" href="/patients">Patients</a>
                         <a class="dropdown-item" href="/roles">Prescription</a>
-                        <a class="dropdown-item" href="/users">Appointment</a>
+                        <a class="dropdown-item" href="/appointments">Appointment</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Laboratory Results</a>
                         <a class="dropdown-item" href="#">Bulk Upload</a>
