--- a/web/src/main/resources/templates/patient.html
+++ b/web/src/main/resources/templates/patient.html
@@ -19,43 +19,43 @@
 	<div th:replace="~{fragments/header :: header}">Header</div>
 
 	<h1>Hospital Management Platform - Patients</h1>
-	<div>
+	<div style="width:50%; align-content: center">
 		<form class="px-4 py-3" id="addPatient">
 			<div class="form-group row">
-				<label for="firstname" class="col-sm-2 col-form-label">Firstname</label>
-				<div class="col-sm-10">
+				<label for="firstname" class="col-sm-4 col-form-label">Firstname</label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" id="firstname" aria-describedby="firstnameHelp" placeholder="Enter firstname">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="lastname" class="col-sm-2 col-form-label">Lastname</label>
-				<div class="col-sm-10">
+				<label for="lastname" class="col-sm-4 col-form-label">Lastname</label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" id="lastname" aria-describedby="lastnameHelp" placeholder="Enter lastname">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="email" class="col-sm-2 col-form-label">Email address</label>
-				<div class="col-sm-10">
+				<label for="email" class="col-sm-4 col-form-label">Email address</label>
+				<div class="col-sm-8">
 					<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="phoneNumber" class="col-sm-2 col-form-label">Phone Number</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumber" placeholder="phoneNumber">
+				<label for="phoneNumber" class="col-sm-4 col-form-label">Phone Number</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="phoneNumber" aria-describedby="phone number" placeholder="phoneNumber">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="address" class="col-sm-2 col-form-label">Home address</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="address" aria-describedby="addressHelp" placeholder="address">
+				<label for="address" class="col-sm-4 col-form-label">Home address</label>
+				<div class="col-sm-8">
+					<textarea id="address" rows="4" cols="8" placeholder="address"></textarea>
 				</div>
 			</div>
 		</form>
 		<button type="submit" id="submit-form">Submit</button>
 	</div>
 
-	<table class="table table-striped" id="allPatients">
+	<table style="border: 1px solid black" class="table table-striped" id="allPatients">
 
 	</table>
 
