--- a/web/src/main/resources/templates/role.html
+++ b/web/src/main/resources/templates/role.html
@@ -18,17 +18,17 @@
 	<div th:replace="~{fragments/header :: header}">Header</div>
 
 	<h1>Hospital Management Platform - Roles</h1>
-	<div>
+	<div style="width:50%; align-content: center">
 		<form class="px-4 py-3" id="addRole">
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label">Name</label>
-				<div class="col-sm-10">
+				<label for="name" class="col-sm-4 col-form-label">Name</label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter role name">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="description" class="col-sm-2 col-form-label">Description</label>
-				<div class="col-sm-10">
+				<label for="description" class="col-sm-4 col-form-label">Description</label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" id="description" aria-describedby="descriptionHelp" placeholder="Enter description">
 				</div>
 			</div>
