--- a/web/src/main/resources/templates/fragments/header.html
+++ b/web/src/main/resources/templates/fragments/header.html
@@ -33,7 +33,7 @@
                         <a class="dropdown-item" href="/roles">Prescription</a>
                         <a class="dropdown-item" href="/appointments">Appointment</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Laboratory Results</a>
+                        <a class="dropdown-item" href="/labresults">Laboratory Results</a>
                         <a class="dropdown-item" href="#">Bulk Upload</a>
                     </div>
                 </li>
