--- a/web/src/main/resources/templates/labresult.html
+++ b/web/src/main/resources/templates/labresult.html
@@ -2,7 +2,7 @@
 <html lang="en"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Hospital Management - Users</title>
+	<title>Hospital Management Platform - Laboratory Results </title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="user.js"></script>
+	<script type="text/javascript" src="labresults.js"></script>
 <!--	<link rel="stylesheet" type="text/css" href="style.css" />-->
 </head>
 <body>
@@ -18,58 +18,38 @@
 	<!-- Header -->
 	<div th:replace="~{fragments/header :: header}">Header</div>
 
-	<h1>Hospital Management Platform - Users</h1>
+	<h1>Hospital Management Platform - Patients Laboratory Results</h1>
 	<div style="width:50%; align-content: center">
-		<form class="px-4 py-3" id="addUser">
+		<form class="px-4 py-3" id="addLabResult">
 			<div class="form-group row">
-				<label for="username" class="col-sm-4 col-form-label">Username</label>
+				<label for="diagnosisDate" class="col-sm-4 col-form-label">diagnosisDate</label>
 				<div class="col-sm-8">
-					<input type="text" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
+					<input type="datetime-local" class="form-control" id="diagnosisDate" aria-describedby="dateHelp" placeholder="Diagnosis Date">
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="password" class="col-sm-4 col-form-label">Password</label>
-				<div class="col-sm-8">
-					<input type="password" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Enter password">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="repeatPassword" class="col-sm-4 col-form-label">Repeat Password</label>
-				<div class="col-sm-8">
-					<input type="password" class="form-control" id="repeatPassword" aria-describedby="passwordHelp" placeholder="Re-enter password">
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label for="roleId" class="col-sm-4 col-form-label">Role</label>
+				<label for="patientId" class="col-sm-4 col-form-label">Patient</label>
 				<div class="col-sm-8">
 					<div class="form-group">
-						<select id="roleId" class="text-dark form-control select2">
-							<option value="">Select role</option>
+						<select id="patientId" class="text-dark form-control select2">
+							<option value="">Select patient</option>
 						</select>
 					</div>
-<!--					<input type="text" class="form-control" id="role" aria-describedby="roleHelp" placeholder="Select role">-->
 				</div>
 			</div>
 			<div class="form-group row">
-				<label for="userStatus" class="col-sm-4 col-form-label">Status</label>
+				<label for="diagnosisDescription" class="col-sm-4 col-form-label">Diagnosis Description</label>
 				<div class="col-sm-8">
-					<div class="form-group">
-						<select id="userStatus" class="text-dark form-control select2">
-							<option value="ACTIVE">Active</option>
-							<option value="INACTIVE">Inactive</option>
-						</select>
-					</div>
+					<textarea id="diagnosisDescription" rows="4" cols="55" placeholder="Enter Diagnosis Description"></textarea>
 				</div>
 			</div>
 		</form>
 		<button type="submit" id="submit-form">Submit</button>
 	</div>
 
-	<table class="table table-striped" id="allUsers">
+	<table class="table table-striped" id="allLabResults">
 
 	</table>
-
 
 	<div id="errorMessage"/>
 </div>
