--- a/web/src/main/resources/templates/fragments/footer.html
+++ b/web/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<body>
+<body class="fixed-bottom">
 <footer class="sticky-footer bg-white" th:fragment="footer">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
