--- a/web/src/main/resources/templates/fragments/header.html
+++ b/web/src/main/resources/templates/fragments/header.html
@@ -57,6 +57,7 @@
                 <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search" aria-label="Search">
             </form>
             <button id="search-form" class="searchForm btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <a class="btn btn-primary" href="/logout">Logout</a>
         </div>
     </nav>
 
