--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Hospital Management - Users</title>
+	<title>Hospital Management - Login</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,70 +10,37 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="user.js"></script>
-<!--	<link rel="stylesheet" type="text/css" href="style.css" />-->
+	<script type="text/javascript" src="login.js"></script>
 </head>
 <body>
 <div align="center">
 	<!-- Header -->
-	<div th:replace="~{fragments/header :: header}">Header</div>
+	<div th:replace="~{fragments/loginheader :: header}">Header</div>
 
-	<h1>Hospital Management Platform - Users</h1>
+	<h1>Hospital Management Platform - Login</h1>
 	<div style="width:50%; align-content: center">
-		<form class="px-4 py-3" id="addUser">
+		<form class="px-4 py-3" id="loginUser">
 			<div class="form-group row">
 				<label for="username" class="col-sm-4 col-form-label">Username</label>
 				<div class="col-sm-8">
-					<input type="text" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
+					<input type="text" required="required" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
 				</div>
 			</div>
 			<div class="form-group row">
 				<label for="password" class="col-sm-4 col-form-label">Password</label>
 				<div class="col-sm-8">
-					<input type="password" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Enter password">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="repeatPassword" class="col-sm-4 col-form-label">Repeat Password</label>
-				<div class="col-sm-8">
-					<input type="password" class="form-control" id="repeatPassword" aria-describedby="passwordHelp" placeholder="Re-enter password">
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label for="roleId" class="col-sm-4 col-form-label">Role</label>
-				<div class="col-sm-8">
-					<div class="form-group">
-						<select id="roleId" class="text-dark form-control select2">
-							<option value="">Select role</option>
-						</select>
-					</div>
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="userStatus" class="col-sm-4 col-form-label">Status</label>
-				<div class="col-sm-8">
-					<div class="form-group">
-						<select id="userStatus" class="text-dark form-control select2">
-							<option value="ACTIVE">Active</option>
-							<option value="INACTIVE">Inactive</option>
-						</select>
-					</div>
+					<input type="password" required="required" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Enter password">
 				</div>
 			</div>
 		</form>
 		<button type="submit" id="submit-form">Submit</button>
 	</div>
 
-	<table class="table table-striped" id="allUsers">
-
-	</table>
-
-
 	<div id="errorMessage"/>
 </div>
 <!-- Footer -->
-<div th:replace="~{fragments/footer :: footer}">Footer</div>
+
+<div class="fixed-bottom" th:replace="~{fragments/footer :: footer}">Footer</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
