--- a/web/src/main/resources/templates/fragments/loginheader.html
+++ b/web/src/main/resources/templates/fragments/loginheader.html
@@ -14,7 +14,7 @@
 <body>
 <div align="center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
-        <a class="navbar-brand" href="#">HMS</a>
+        <a class="navbar-brand" href="#">HMA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
