--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 		</form>
-		<button type="submit" id="submit-form">Submit</button>
+		<button type="submit" id="submit-form">Login</button>
 	</div>
 
 	<div id="errorMessage"/>
