--- a/web/src/main/resources/templates/labresult.html
+++ b/web/src/main/resources/templates/labresult.html
@@ -22,7 +22,7 @@
 	<div style="width:50%; align-content: center">
 		<form class="px-4 py-3" id="addLabResult">
 			<div class="form-group row">
-				<label for="diagnosisDate" class="col-sm-4 col-form-label">diagnosisDate</label>
+				<label for="diagnosisDate" class="col-sm-4 col-form-label">Diagnosis Date</label>
 				<div class="col-sm-8">
 					<input type="datetime-local" class="form-control" id="diagnosisDate" aria-describedby="dateHelp" placeholder="Diagnosis Date">
 				</div>
@@ -41,6 +41,12 @@
 				<label for="diagnosisDescription" class="col-sm-4 col-form-label">Diagnosis Description</label>
 				<div class="col-sm-8">
 					<textarea id="diagnosisDescription" rows="4" cols="55" placeholder="Enter Diagnosis Description"></textarea>
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="resultFile" class="col-sm-4 col-form-label">Attach results</label>
+				<div class="col-sm-8">
+					<input type="file" class="form-control" id="resultFile" placeholder="Upload result">
 				</div>
 			</div>
 		</form>
