--- a/web/src/main/resources/templates/patient.html
+++ b/web/src/main/resources/templates/patient.html
@@ -45,6 +45,14 @@
 					<input type="text" class="form-control" id="phoneNumber" aria-describedby="phone number" placeholder="phoneNumber">
 				</div>
 			</div>
+
+			<div class="form-group row">
+				<label for="postCode" class="col-sm-4 col-form-label">Post Code</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="postCode" aria-describedby="post code" placeholder="postCode">
+				</div>
+			</div>
+
 			<div class="form-group row">
 				<label for="address" class="col-sm-4 col-form-label">Home address</label>
 				<div class="col-sm-8">
